test/expect/cmd.cc-msvc-bad-cmd.stderr.txt
^error: '--castxml-cc-msvc' compiler command failed:

 'cc-msvc-bad-cmd' '-c' '[^']*/share/castxml/detect_vs.cpp' '-Fo[^']*/detect_vs.obj'
